added padded to devour button, create router.post in controller.js

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,8 @@
 <li>
   {{name}}
 
-  <button class="change-devour" data-id="{{id}}" data-newate="{{ate}}">
+  <button class="change-devour btn btn-danger" data-id="{{id}}" data-newate="{{ate}}">
     {{#if ate}}IM FULL!{{else}}DEVOUR ME WHOLE!{{/if}}
   </button>
 
-  <button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
 </li>
