--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,6 +7,8 @@
     <div class="row">
       <div class="col-lg-6">
         <h4>Burgers on the MENU</h4>
+        <hr class="m-4">
+
         <ul>
           {{#each burgers}}
           {{#unless devour}}
@@ -17,6 +19,8 @@
       </div>
       <div class="col-lg-6">
         <h4>Burgers you have DEVOURED</h4>
+        <hr class="m-4">
+
         <ul>
           {{#each burgers}}
           {{#if devour}}
@@ -31,11 +35,10 @@
   <center>
     <h2>Add a Burger</h2>
     <form class="create-form">
-
       <div class="form-group">
         <label for="ca">Burger name:</label>
         <input type="text" id="ca" name="name">
       </div>
-      <button type="submit">Add Burger to the menu</button>
+      <button type="submit" class="btn btn-danger">Add Burger to the menu</button>
     </form>
   </center>
