got the create burger, update burger, and delete burger routes to work

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,9 @@
   {{name}}
 
   <button class="change-devour btn btn-danger" data-id="{{id}}" data-newate="{{ate}}">
-    {{#if ate}}IM FULL!{{else}}DEVOUR ME WHOLE!{{/if}}
+
+    {{#if ate}}DEVOUR ME WHOLE!{{else}}✔️Yum! Back to menu{{/if}}
   </button>
 
+  <button class="delete-burger btn btn-dark" data-id="{{this.id}}">DELETE!</button>
 </li>
