--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
         <ul>
           {{#each burgers}}
           {{#unless devour}}
-          {{> burgers/burger-block ate=false}}
+          {{> burgers/burger-block ate=true}}
           {{/unless}}
           {{/each}}
         </ul>
@@ -24,7 +24,7 @@
         <ul>
           {{#each burgers}}
           {{#if devour}}
-          {{> burgers/burger-block ate=true}}
+          {{> burgers/burger-block ate=false}}
           {{/if}}
           {{/each}}
         </ul>
@@ -36,8 +36,8 @@
     <h2>Add a Burger</h2>
     <form class="create-form">
       <div class="form-group">
-        <label for="ca">Burger name:</label>
-        <input type="text" id="ca" name="name">
+        <label for="burg">Burger name:</label>
+        <input type="text" id="burg" name="name">
       </div>
       <button type="submit" class="btn btn-danger">Add Burger to the menu</button>
     </form>
