added burger clip art to webpage

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,12 @@
 <div class="jumbotron">
 
-  <h1 class="display-4 text-center">Burgers Baby</h1>
+  <h1 class="display-4 text-center"><img src="/assets/img/PinClipart.com_eat-healthy-clip-art_695168.jpg"
+      alt="burger-clip-art" height="100" width="100"> Burgers Baby! <img
+      src="/assets/img/PinClipart.com_eat-healthy-clip-art_695168.jpg" alt="burger-clip-art" height="100" width="100">
+  </h1>
+
+
+
   <hr class="m-4">
 
   <div class="container text-center">
