list style: none, changed font, added custom marginsto each container

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,11 +2,16 @@
   font-family: "Alata", sans-serif;
 }
 
+.mgTop {
+  margin-top: 25px;
+}
+
 li {
   margin: 4px;
   font-family: "Alata", sans-serif;
+  list-style: none;
 }
 
 ul {
-  margin: 2px;
+  margin-bottom: 20px;
 }
