--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,18 +1,15 @@
-<div class="jumbotron">
+<div class="jumbotron bg-secondary">
 
   <h1 class="display-4 text-center"><img src="/assets/img/PinClipart.com_eat-healthy-clip-art_695168.jpg"
       alt="burger-clip-art" height="100" width="100"> Burgers Baby! <img
       src="/assets/img/PinClipart.com_eat-healthy-clip-art_695168.jpg" alt="burger-clip-art" height="100" width="100">
   </h1>
-
-
-
   <hr class="m-4">
 
   <div class="container text-center">
     <div class="row">
       <div class="col-lg-6">
-        <h4>Burgers on the MENU</h4>
+        <h4>Burgers on the MENU 📝</h4>
         <hr class="m-4">
 
         <ul>
@@ -24,7 +21,7 @@
         </ul>
       </div>
       <div class="col-lg-6">
-        <h4>Burgers you have DEVOURED</h4>
+        <h4>Burgers you have DEVOURED 🍽</h4>
         <hr class="m-4">
 
         <ul>
@@ -37,14 +34,15 @@
       </div>
     </div>
   </div>
+  <hr class="m-4">
 
-  <center>
+  <div class="container text-center mgTop">
     <h2>Add a Burger</h2>
     <form class="create-form">
       <div class="form-group">
-        <label for="burg">Burger name:</label>
+        <label for="burg">Burger Name:</label>
         <input type="text" id="burg" name="name">
       </div>
-      <button type="submit" class="btn btn-danger">Add Burger to the menu</button>
+      <button type="submit" class="btn btn-danger">Add Burger to the Menu</button>
     </form>
-  </center>
+  </div>
