--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,11 +12,10 @@
   <script src="/assets/js/burgers.js"></script>
 </head>
 
-<body>
-  {{!-- <div class="jumbotron"> --}}
+<body class="bg-secondary">
+
   {{{ body }}}
 
-  {{!-- </div> --}}
 </body>
 
 </html>
