--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -3,7 +3,7 @@
 
   <button class="change-devour btn btn-danger" data-id="{{id}}" data-newate="{{ate}}">
 
-    {{#if ate}}DEVOUR ME WHOLE!{{else}}✔️Yum! Back to menu{{/if}}
+    {{#if ate}}DEVOUR ME WHOLE!{{else}}✔️Yum! Back to Menu{{/if}}
   </button>
 
   <button class="delete-burger btn btn-dark" data-id="{{this.id}}">DELETE!</button>
