added to console log of connecting to db, and added burger emoji to index handlebars page by add a burger

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,7 +36,7 @@
   <hr class="m-4">
 
   <div class="container text-center mgTop">
-    <h2>Add a Burger</h2>
+    <h2>Add a Burger 🍔</h2>
     <form class="create-form">
       <div class="form-group">
         <label for="burg">Burger Name:</label>
